name:                configurator-export
version:             0.1.0.0
synopsis:            Pretty printer and exporter for configurations from
                     the "configurator" library.
description:         Please see README.md
homepage:            http://github.com/mstksg/configurator-export#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2015
category:            Configuration, Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Configurator.Export
  build-depends:       base >= 4.7 && < 5
                     , configurator
                     , pretty
                     , semigroups
                     , text
                     , unordered-containers
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite configurator-export-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , configurator-export
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/configurator-export
